--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,25 @@
 {
   "name": "Link2Insulin",
   "short_name": "Link2Insulin",
-  "start_url": ".",
+  "description": "Calculateur d'insuline personnel pour diabétiques.",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#161d33",
-  "theme_color": "#161d33",
+  "background_color": "#0f172a",
+  "theme_color": "#3b82f6",
   "orientation": "portrait",
+  "scope": "/",
   "icons": [
-    { "src": "icon-192x192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icon-512x512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    }
   ]
 }
